--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".SettingsActivity"
             android:label="@string/settings_title" >
         </activity>
+        <activity
+            android:name=".MovieDetailsActivity"
+            android:label="@string/title_activity_movie_details" >
+        </activity>
     </application>
 
 </manifest>
